--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mds/data-table": "^3.2.5",
+    "@mds/layout-grid": "^3.1.1",
+    "@mds/list-group": "^4.0.2",
+    "@mds/section": "^4.1.2",
+    "@mds/switch": "^3.0.10",
     "apollo-boost": "^0.4.9",
     "core-js": "^3.6.5",
     "graphql": "^15.5.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.5"
   },
