--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mds/checkbox": "^3.0.18",
     "@mds/data-table": "^3.2.5",
+    "@mds/fieldset": "^3.2.7",
+    "@mds/form": "^3.3.3",
     "@mds/layout-grid": "^3.1.1",
-    "@mds/list-group": "^4.0.2",
+    "@mds/search-field": "^4.0.3",
     "@mds/section": "^4.1.2",
     "@mds/switch": "^3.0.10",
     "apollo-boost": "^0.4.9",
