--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.6.5",
     "graphql": "^15.5.0",
     "node-sass": "^4.12.0",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.5"
